# music_rip

./: .gitignore  README.md  batch.sh  download.sh  pyproject.toml
youtube_audio_downloader/: __init__.py
youtube_audio_downloader/cli/: __init__.py  batch.py  config_manager.py  download.py
youtube_audio_downloader/core/: __init__.py  config.py  downloader.py
youtube_audio_downloader/utils/: __init__.py  progress.py  validators.py
