[project]
name = "youtube-audio-downloader"
version = "0.1.0"
description = "A Python package for downloading YouTube videos as audio files"
authors = [
    {name = "Glenn Harless",email = "glenn@nodus.io"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "yt-dlp (>=2025.5.22,<2026.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry.scripts]
youtube-audio-downloader = "youtube_audio_downloader.cli.download:main"
youtube-batch-downloader = "youtube_audio_downloader.cli.batch:main"
youtube-audio-config = "youtube_audio_downloader.cli.config_manager:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
